1998-08-15  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcscmds.c (call_diff_write_output): Update to reflect new
	calling convention for the write_output callback.

1998-08-15  Jim Meyering  <meyering@ascend.com>

	* update.c (merge_file): Warn about failed unlink when not due
	to ENOENT.

	* server.h (CLIENT_SERVER_STR): New macro
	* create_adm.c (Create_Admin): Use it.
	* entries.c (Scratch_Entry, Register): Use it.
	* filesubr.c (copy_file, xchmod, rename_file, unlink_file): Use it.
	* history.c (history_write): Use it.
	* modules.c (do_module): Use it.
	* no_diff.c (No_Difference): Use it.
	* run.c (run_popen): Use it.
	* server.c (server_register): Use it.

1998-08-14  Jim Meyering  <meyering@ascend.com>

	* hardlink.c (lookup_file_by_inode): Use existence_error rather than
	comparing errno to ENOENT directly.

	* client.c (copy_a_file): Unlink destination before doing copy.
	* sanity.sh (join-readonly-conflict): New test for this -- it would
	fail only in client/server mode.

	* sanity.sh (rcsmerge-symlink-4): Don't use `test -L', it's not
	portable.  Instead, match against the output of `ls -l'.
	(dotest tag8k-16): Simplify tag-construction code and at the same
	time, avoid using expr's `length' and `substr' operators.  Not
	all versions of expr support those.

1998-08-14  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Bump version number to 1.10.0.1.

Thu Aug 13 11:15:24 1998  Noel Cragg  <noel@swish.red-bean.com>

	* version.c: Change version number to 1.10 and name to `Halibut'.

	* sanity.sh (rcslib): new tests to check behavior of symlinks in
 	the repository.

Wed Aug 12 15:39:38 1998  Noel Cragg  <noel@swish.red-bean.com>

	* main.c (lookup_command_attribute): the `annotate' command
 	shouldn't require access to the repository.  Add comment about
 	commands that do not use the working directory.

Mon Aug 10 10:26:38 1998  Noel Cragg  <noel@swish.red-bean.com>

	* version.c: Change version number to 1.9.30.
